deal with roles